sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:8: error: reassignment to val
    echange=0
           ^